Enhance problem description for clarity
Added additional context to the problem description.

--- a/1.4
+++ b/1.4
@@ -1,4 +1,4 @@
-%% This is for the +5 m/s east problem
+%% This is for the +5 m/s east problem. For the analytical derivation of the trim state part look at line 245 ish.
 
 
 clear;
